# mithryl-rag

./: .gitignore  LOG.md  README.md  log.md  pyproject.toml
examples/: answer_1.txt  answer_2.txt  answer_3.txt  answer_4.txt  questions.txt
src/mithryl_rag/: __init__.py  config.py
src/mithryl_rag/core/: document_loader.py  image_to_text.py  rag.py  vector_store.py
src/mithryl_rag/scripts/: benchmark.py  load_documents.py  tui.py
tests/: test_document_loader.py  test_vector_store.py
