[project]
name = "mithryl-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Milos Svana", email = "milos.svana@mailfence.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "markitdown[docx]>=0.1.4",
    "pytest>=9.0.2",
]

[project.scripts]
load-documents = "mithryl_rag.scripts.load_documents:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
